--- a/index.html
+++ b/index.html
@@ -1,81 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="utf-8">
-  <title>Aguillar Family Wine Festival</title>
-  <link rel="stylesheet" type="text/css" href="reset.css" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
-  <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+  <title></title>
+  <link href="style.css" type="text/css" rel="stylesheet">
 </head>
+
 <body>
-  <header>
-    <h1>Annual Aguillar Family Wine Festival</h1>
-  </header>
-  
-  <div class="container">
-    <table>
-      <thead>
-        <tr>
-          <th colspan="2">
-          <h1>Wine Festival Schedule</h1>
-          </th>
-        </tr>
-        <tr>
-          <th>
-            <h2>Time</h2>
-          </th>
-          <th>
-            <h2>Event</h2>
-          </th>
-        </tr> 
-      </thead>
-      <tbody>
-        <tr>
-          <td class="left">
-            <h3>12:00 PM</h3>
-          </td>
-          <td>
-            <h3>Welcome Reception</h3>
-          </td>
-        </tr>
-          <td class="left">
-            <h3>1:00 PM</h3>
-          </td>
-          <td>
-            <h3>Storytelling &amp; Tasting</h3>
-          </td>
-        <tr>
-          <td class="left">
-            <h3>2:00 PM</h3>
-          </td>
-          <td>
-            <h3>Wine Luncheon</h3>
-          </td>
-        </tr>
-        <tr>
-          <td class="left">
-            <h3>3:00 PM</h3>
-          </td>
-          <td class="left"> 
-            <h3>Aguillar Family Wines</h3>
-          </td>
-        </tr>           
-        <tr>
-          <td class="left">
-            <h3>4:00 PM</h3>
-          </td>
-          <td>
-            <h3>Wine &amp; Cheese Tasting</h3>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <div class="header">
+    <img src="https://content.codecademy.com/courses/freelance-1/unit-2/travel.jpeg" />
+    <h1>Olivia Woodruff</h1>
+    <p class="about-me">I am a developer specializing in HTML and CSS. I like to run, bike, and make coffee using an Aeropress.</p>
   </div>
-  
-  <footer>
-    <h3>Contact</h3>
-    <h3>Location</h3>
-    <h3>Privacy Policy</h3>
-  </footer>
+
+  <h2>Projects</h2>
+  <p class="title">Web Development projects</p>
+  <ul>
+    <li>Coffee Bruër</li>
+    <li>Taco Finder</li>
+    <li>CSS Selector Finder</li>
+    <li>HTML Formatter</li>
+  </ul>
+
+  <p class="title">Design projects</p>
+  <ul>
+    <li>Yum Yum Fudge Inc.</li>
+    <li>University of Marimont Dance Marathon</li>
+  </ul>
+  <h2>Contact</h2>
+  <p>Find me on Twitter, Dribbble, and GitHub.</p>
+
+  <h6>&copy; Copyright. All Rights Reserved.</h6>
 </body>
+
 </html>
