--- a/index.html
+++ b/index.html
@@ -1,71 +1,113 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Davie JR's Menu</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,500,700|Oswald:300,400,700" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
-<body>
-
-  <!-- Navigation Section -->
-
-  <nav>
-    <img src="https://content.codecademy.com/courses/web-101/unit-6/htmlcss1-img_burger-logo.svg" />
-    <span><a href="#">MENU</a></span>
-    <span><a href="#">NUTRITION</a></span>
-    <span><a href="#">ORDER</a></span>
-    <span><a href="#">LOCATIONS</a></span>
-  </nav>
-
-  <!-- Content Section -->
-
-  <div class="content">
-
-    <!-- Content Header -->
-    
-    <div class="header">
-      <h1>BBQ BACON BURGER</h1>
-    </div>
-
-    <!-- Content Body -->
-
-    <div class="body">
-      <p>
-        Our BBQ Bacon Burger features our special house ground blend of wagyu and sirloin, spiced perfectly, and finished off with just a drop of white truffle oil. A butter grilled brioche bun layered with roasted red onion, perfectly crispy pork belly, and our hickory smoked BBQ sauce.
-      </p>
-
-      <!-- Order Button -->
-
-      <a href="#" class="button">ORDER NOW</a>
-
-      <!-- Nutrition Information -->
-      
-      <ul class="nutrition">
-        <li>
-          <span class="category">CALORIES</span>
-          <span class="value">678</span>
-        </li>
-        <li>
-          <span class="category">FAT</span>
-          <span class="value">32</span>
-        </li>
-        <li>
-          <span class="category">PROTEIN</span>
-          <span class="value">8</span>
-        </li>
-        <li>
-          <span class="category">CARBOHYDRATES</span>
-          <span class="value">34</span>
-        </li>
-        <li>
-          <span class="category">SODIUM</span>
-          <span class="value">112</span>
-        </li>
-      </ul>
-    </div>
-  </div>
-  
-</body>
+    <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dosis:wght@200..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./style.css">
+    </head>
 </html>
+<body>
+    <h1>Miguel's Website Style Guide</h1>
+    <div class="container">
+        <h2 class="colors-heading">Colors</h2>
+        <div class="color-container">
+            <div class ="color-panel gir-green">
+                <p class ="color-label">Gir Green</p>
+                <p class ="color-hex dosis">#92E8A5</p>
+            </div>
+            <div class ="color-panel burnt-creamsicle">
+                <p class ="color-label">Burnt Creamsicle</p>
+                <p class ="color-hex dosis">#F59725</p>
+            </div>
+            <div class ="color-panel retro-future">
+                <p class ="color-label">Retro Future</p>
+                <p class ="color-hex dosis">#16F5C5</p>
+            </div>
+            <div class ="color-panel charmeleon">
+                <p class ="color-label white">Charmeleon</p>
+                <p class ="color-hex dosis white">#F54305</p>
+            </div>
+            <div class ="color-panel blue-gray-moss">
+                <p class ="color-label">Blue-Gray Moss</p>
+                <p class ="color-hex dosis">#76AB9F</p>
+            </div>
+            <div class ="color-panel evergreen">
+                <p class ="color-label white">Evergreen Rug</p>
+                <p class ="color-hex dosis white">#457550</p>
+            </div>  
+        </div>
+    </div>
+    <div class="container fonts">
+        <h2>Fonts</h2>
+        <div class="font-container">
+            <div class="font-panel">
+                <p class="font-label work-sans">Work Sans</p>
+                <p class="regular work-sans">Waxy and quivering, jocks fumble the pizza.</p>
+                <p class="bold work-sans">Waxy and quivering, jocks fumble the pizza.</p>
+                <p class="italic work-sans">Waxy and quivering, jocks fumble the pizza.</p>
+            </div>
+            <div class="font-panel">
+                <p class="font-label dosis">Dosis</p>
+                <p class="regular dosis">Waxy and quivering, jocks fumble the pizza.</p>
+                <p class="bold dosis">Waxy and quivering, jocks fumble the pizza.</p>
+                <p class="italic dosis">Waxy and quivering, jocks fumble the pizza.</p>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <h2>Text Styles</h2>
+        <div class="text-container">
+            <div class="text-panel">
+                <h1>H1: Main Page Heading</h1>
+                <ul>
+                    <li>
+                        ::marker
+                        "Font-weight: 700 (bold)"
+                    </li>
+                    <li>
+                        Font-size: 26px
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-family: Dosis"
+                    </li>
+                </ul>
+            </div>
+            <div class="text-panel">
+                <h2>H2: Subheading</h2>
+                <ul>
+                    <li>
+                        ::marker
+                        "Font-weight: 500"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-size: 18px"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-family: Dosis"
+                    </li>
+                </ul>
+            </div>
+            <div class="text-panel">
+                <p>P: Subheading</p>
+                <ul>
+                    <li>
+                        ::marker
+                        "Font-weight: 400 (regular)"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-size: 14px"
+                    </li>
+                    <li>
+                        ::marker
+                        "Font-family: Work Sans"
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</body>
